@@ -49,10 +49,6 @@ public class CompanyManager {
         return instance;
     }
 
-    public void addProductToCatalog(String name, int weight) {
-        productService.addProduct(name, weight);
-    }
-
     public void addBranch(String addr, String phone, String contact) {
         Location l = locationService.addLocation(addr, phone, contact);
         branchService.addBranch(l);
@@ -69,29 +65,20 @@ public class CompanyManager {
         supplierService.addSupplier(loc, productMap);
     }
 
-    public void finishShipment(int transportId) {
-        transportService.removeTransport(transportService.getTransportById(transportId));
-    }
-
-    // FIXED: All parameters resolved cleanly from standard UI array list options
     public int createTransportAndGetId(int truckUiIdx, int driverUiIdx, int sourceUiIdx,
-                                       Map<Supplier, Map<Product, Integer>> supplierAllocations) {
+                                       Map<Integer, Map<Integer, Integer>> supplierAllocations) {
 
         Truck truck = truckService.getAvailableTruckByIndex(truckUiIdx);
         Driver driver = driverService.getAvailableDriverByIndex(driverUiIdx);
         Location source = locationService.getLocationByIndex(sourceUiIdx);
 
-        List<Supplier> allSuppliers = supplierService.getSuppliers();
         List<Request> requests = requestService.getAllRequests();
-        return transportService.createTransport(truck, driver, source, requests, supplierAllocations);
-    }
 
-    public List<Supplier> getAllSuppliers() {
-        return supplierService.getSuppliers();
-    }
-
-    public BranchManager getBranchManagerByIndex(int branchIndex) {
-        return branchService.getBranchByIndex(branchIndex);
+        Map<Supplier, Map<Product, Integer>> supplierAllocationsMap = new HashMap<>();
+        for (Map.Entry<Supplier, Map<Integer, Integer>> entry : supplierService.mapIndicesToSuppliers(supplierAllocations).entrySet()){
+            supplierAllocationsMap.put(entry.getKey(), productService.mapIndicesToProducts(entry.getValue()));
+        }
+        return transportService.createTransport(truck, driver, source, requests, supplierAllocationsMap);
     }
 
     public List<String> getSupplierProductsDisplay(int supplierIndex) {
@@ -102,7 +89,7 @@ public class CompanyManager {
         return productsDisplay;
     }
 
-    public Product getSupplierProductByDisplayIndex(int supplierIndex, int productUiIndex) {
+    private Product getSupplierProductByDisplayIndex(int supplierIndex, int productUiIndex) {
         Supplier supplier = supplierService.getSupplierByIndex(supplierIndex);
         int counter = 0;
         for (Product product : supplier.getProductsAvailable().keySet()) {
@@ -123,10 +110,7 @@ public class CompanyManager {
 
     public void processTransport(int transportId) {
         Transport transport = transportService.getTransportById(transportId);
-        System.out.println("Got ID: " + transportId);
 
-        // CRITICAL FIX: Every time this method retries, we must reset the truck's physical inventory count.
-        // This stops items that were loaded during a failed attempt from staying on the truck.
         transport.getTruck().emptyTruck();
 
         while (!transport.getSupplierAllocations().isEmpty()) {
@@ -146,7 +130,7 @@ public class CompanyManager {
         }
 
         while (!transport.getRequests().isEmpty()) {
-            Request currentRequest = transport.getRequests().get(0);
+            Request currentRequest = transport.getRequests().getFirst();
 
             try {
                 transport.getTransportFile().arriveAtRequest(currentRequest);
@@ -154,7 +138,7 @@ public class CompanyManager {
                 transport.getTransportFile().leaveRequest(currentRequest);
                 transport.removeRequest(currentRequest);
             } catch (Exceptions.ProductNotFoundOnTruckException itse) {
-                System.out.println("\n[SKIPPED DESTINATION] " + itse.getMessage());
+                System.out.println("Skipped Destination:" + itse.getMessage());
                 transportService.skipRequest(transportId);
             }
         }
@@ -185,10 +169,6 @@ public class CompanyManager {
         transportService.manualRemoveItems(transport, itemsToRemove);
     }
 
-    public Transport getTransportById(int transportId) {
-        return transportService.getTransportById(transportId);
-    }
-
     public void resolveOverweightIssue(int transportId, String choice) {
         switch (choice) {
             case "2" -> transportService.performEmergencyDropOff(transportId);
@@ -206,34 +186,53 @@ public class CompanyManager {
             default -> transportService.skipSupplier(transportId);
         }
     }
-    public void addTruck(int truckNumber,String model,int truckWeight,int MaxWeight,int requiredLicense) {
-        truckService.addTruck(truckNumber,model,truckWeight,MaxWeight,requiredLicense);
-    }
-    public void addDriver(String driverName,int license) {
-        driverService.addDriver(driverName,license);
-    }
 
     public void loadDemoData() {
-        addProductToCatalog("Apple", 150);
-        addProductToCatalog("Banana", 120);
-        addProductToCatalog("Milk", 6);
 
-        addTruck(101, "Isuzu Sumo", 3500, 7500, 2);
-        addDriver("Bob", 2);
-        addBranch("Ashdod", "08-222", "Grace");
+        productService.addProduct("Apple", 150);
+        productService.addProduct("Banana", 120);
+        productService.addProduct("Milk", 6);
+        productService.addProduct("Bread", 15);
+        productService.addProduct("Eggs", 30);
+        productService.addProduct("Cheese", 45);
+        productService.addProduct("Chicken", 80);
+
+        truckService.addTruck(101, "Isuzu Sumo", 3500, 7500, 2);
+        truckService.addTruck(102, "Mercedes Sprinter", 2000, 4000, 1);
+        truckService.addTruck(103, "Volvo FH", 8000, 25000, 3);
+        truckService.addTruck(104, "Renault Master", 2200, 4500, 1);
+
+        driverService.addDriver("Bob", 2);
+        driverService.addDriver("Charlie", 1);
+        driverService.addDriver("David", 3);
+        driverService.addDriver("Eve", 2);
+
+        addBranch("Ashdod", "08-222-9900", "Grace");
+        addBranch("Jerusalem", "02-555-8800", "Heidi");
+        addBranch("Haifa", "04-333-7700", "Ivan");
+        addBranch("Eilat", "08-999-6600", "Judy");
 
         try {
-            Map<Integer, Integer> demoStock = new HashMap<>();
-            demoStock.put(0, 100);
-            demoStock.put(1, 100);
-            registerSupplierByIndices("Tel Aviv", "03-123", "Alice", demoStock);
-        } catch (Exception ignored) {}
+            Map<Integer, Integer> stockTelAviv = new HashMap<>();
+            stockTelAviv.put(0, 100); // Apple
+            stockTelAviv.put(1, 100); // Banana
+            stockTelAviv.put(2, 50);  // Milk
+            registerSupplierByIndices("Tel Aviv", "03-123-9901", "Alice", stockTelAviv);
+
+            Map<Integer, Integer> stockPetahTikva = new HashMap<>();
+            stockPetahTikva.put(3, 200); // Bread
+            stockPetahTikva.put(4, 150); // Eggs
+            registerSupplierByIndices("Petah Tikva", "03-555-4433", "Frank", stockPetahTikva);
+
+            Map<Integer, Integer> stockRishon = new HashMap<>();
+            stockRishon.put(5, 80);  // Cheese
+            stockRishon.put(6, 120); // Chicken
+            registerSupplierByIndices("Rishon LeZion", "03-888-2211", "George", stockRishon);
+
+        } catch (Exception e) {
+            System.err.println("Error loading supplier demo data: " + e.getMessage());
+        }
     }
-    public List<String> getAvailableTrucksDisplay() {return truckService.getAvailableTrucksDisplay();}
-    public List<String> getAvailableDriversDisplay() {return driverService.getAvailableDriversDisplay();}
-    public List<String> getAllLocationsDisplay() { return locationService.getLocationsDisplay(); }
-    public List<String> getProductCatalogDisplay() { return productService.getProductsDisplay(); }
-    public List<String> getBranchesDisplay() { return branchService.getBranchesDisplay(); }
 
     // FIXED: Appends new tracking allocations using target integers purely
     public void addRequest(int storeLocationId, Map<Integer, Integer> selectedItems) {
@@ -244,26 +243,12 @@ public class CompanyManager {
         requestService.addRequest(branchService.getBranchByIndex(storeLocationId).getLocation(), newMap);
     }
 
-    public Map<Integer, String> getAllSuppliersDisplay() {
-        Map<Integer, String> map = new HashMap<>();
-        List<Supplier> sups = supplierService.getSuppliers();
-        for (int i = 0; i < sups.size(); i++) {
-            map.put(i, sups.get(i).getName());
-        }
-        return map;
-    }
-
     public void resupplySupplier(int sIndex, int catalogProductIndex, int qty) {
         Supplier supplier = supplierService.getSupplierByIndex(sIndex);
         Product product = productService.getProductByIndex(catalogProductIndex);
         supplier.addStock(product, qty);
     }
 
-    public List<String> getActiveRequestLocationsDisplay() {
-        return requestService.getActiveRequestLocations();
-    }
-
-    // FIXED: Safe positional list manipulation modifiers
     public void updateRequestAddProduct(int requestUiIdx, int catalogProductUiIdx, int qty) {
         Request req = requestService.getRequestByIndex(requestUiIdx);
         Product product = productService.getProductByIndex(catalogProductUiIdx);
@@ -297,21 +282,19 @@ public class CompanyManager {
         return productsDisplay;
     }
 
-    public void removeRequestByIndex(int index) {
-        requestService.removeRequestByIndex(index);
-    }
-
-    public String getFirstSupplierName(int transportId) {
+    public String getFirstSupplierNameByTransportId(int transportId) {
         Transport transport = transportService.getTransportById(transportId);
         return transport.getSupplierAllocations().keySet().iterator().next().getName();
     }
 
-    public Product getProductByIndex(int requestProductUiIdx) {
-        return productService.getProductByIndex(requestProductUiIdx);
+    public String getTransportFileDisplayById(int transportId) {
+        Transport transport = transportService.getTransportById(transportId);
+        return transport.getTransportFile().toString();
     }
 
-    public boolean isValidBranchIndex(int branchIndex) {
-        return branchService.getBranchByIndex(branchIndex) != null;
+    public boolean checkDriverTruck(int driverIndex, int truckIndex) {
+        Driver driver = driverService.getAvailableDriverByIndex(driverIndex);
+        Truck truck = truckService.getAvailableTruckByIndex(truckIndex);
+        return driver.getLicense() >= truck.getMinLicense();
     }
-
 }
